# ShamblesEngine

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: context.c.BA22F6E68844D771.idx  egl_context.c.048CE37CA09F3828.idx  glad.c.1647D81730B3B16B.idx  glad.h.2DF36699CF297407.idx  glfw3.h.673F94000AC23762.idx  glfw3native.h.B74B23CF76667D6F.idx  glx_context.c.8D89910B931D74A7.idx  init.c.48B0D05876EF8658.idx  input.c.CA97160B735BBEAE.idx  internal.h.1539B35AC809166C.idx  khrplatform.h.0D74516FFF246CED.idx  linux_joystick.c.A06CB7B715947FF3.idx  linux_joystick.h.222CE7C60B5A0EBE.idx  main.c.9519BDEDEF9BA732.idx  mappings.h.E6BE4043E60AC670.idx  monitor.c.B1196AD78F9501CD.idx  null_init.c.8C8C008D00504AF9.idx  null_joystick.c.7BB3941E3CEB541E.idx  null_joystick.h.AF8ECAED695621ED.idx  null_monitor.c.64CF74A492FBBC1B.idx  null_platform.h.86A52DAC57C8A6D5.idx  null_window.c.77DFEE3C17CD6DB5.idx  osmesa_context.c.F14C99F32C037553.idx  platform.c.27DFB63B3C486D60.idx  platform.h.892F5180B70CADB2.idx  posix_module.c.4B851C3AD58B5A32.idx  posix_poll.c.4B0D3545D7E8D2B0.idx  posix_poll.h.434F88AE5EFC7701.idx  posix_thread.c.F08E7B36DEA9A76C.idx  posix_thread.h.CD8D2A0FDDCE1BB6.idx  posix_time.c.FC16B4CA3B782AA4.idx  posix_time.h.95A232C44834B275.idx  shamCore.h.1D86F80B7AC368E9.idx  ui.c.132145309F72435C.idx  ui.h.FDD0D8071BB374C6.idx  vulkan.c.FEC91AA07392445D.idx  window.c.1695F7864A29BF8E.idx  window.h.2F65B17E4D8DD181.idx  (+10 more)
shaders/: fragmentShader  vertexShader
src/: main.c
src/core/: core.h  coreSettings.h  shamCore.h
src/shaders/: fragmentShader
(+16 files in other folders)
